# CUDAClionStarterProject

./: .gitignore  CMakeLists.txt  README.md  cudaHeaders.h  cudaMain.cu  cudaMain.h  dummy.cpp  main.cpp  vecAdd.cu  vecAdd.h
